- fix cart errors - fix contact form errors - update svg files for close icons - fix pinterest ‘pin it’ button - remove border color - fix cart size issue on mobile - improve contact form display - improve welcome message display - decrease welcome message font size for mobile - fix Facebook share popup - adjust product thumbnail display for mobile - improve adding/added status change for cart button

--- a/source/stylesheets/cart.css.sass
+++ b/source/stylesheets/cart.css.sass
@@ -62,7 +62,7 @@
       width: auto
       
       @media screen and (max-width: $break-extra-large)
-        max-width: 50%
+        max-width: 48%
 
       a
         color: $primary-text-color
@@ -153,6 +153,9 @@
     color: $secondary-text-color
     font-size: 12px
     margin-top: 20px
+    
+    @media screen and (max-width: $break-small)
+      font-size: 14px
     
   .cart_shipping
     .select
