--- a/source/stylesheets/contact.css.sass
+++ b/source/stylesheets/contact.css.sass
@@ -19,6 +19,8 @@
     height: 56px
     
   input, textarea
+    +appearance(none)
+    +border-radius(0)
     border: 2px solid $secondary-text-color
     font-size: 16px
     padding: 14px
@@ -77,3 +79,7 @@
       
       @media screen and (max-width: $break-small)
         width: 100%
+        
+.message_sent
+  line-height: 1.3em
+  text-align: center
