--- a/source/stylesheets/products.css.sass
+++ b/source/stylesheets/products.css.sass
@@ -70,6 +70,7 @@
           
       .category_info
         color: $home-text-color
+        line-height: 1.3em
         font-size: 26px
         text-align: center
         position: absolute
@@ -79,6 +80,7 @@
         width: 100%
         
         > div
+          padding: 0 20px
           position: absolute
           text-align: center
           top: 50%
@@ -153,7 +155,8 @@
       width: 33.3333%
 
     @media screen and (max-width: $break-small)
-      width: 50%
+      padding-bottom: 40px !important
+      width: 100%
       
     a
       display: block
